--- a/Section-04-Variable-Characteristics/1-Missing-Data.ipynb
+++ b/Section-04-Variable-Characteristics/1-Missing-Data.ipynb
@@ -931,9 +931,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fsml",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "fsml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -945,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
