ran code and added some code

--- a/Section-10-Categorical-Encoding-Rare-Labels/01-pandas/01-ohe-frequent-categories.ipynb
+++ b/Section-10-Categorical-Encoding-Rare-Labels/01-pandas/01-ohe-frequent-categories.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "       'AsphShn', 'Stone', 'Other', 'CBlock'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "((1022, 3), (438, 3))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,6 +285,155 @@
     ")  # seed to ensure reproducibility\n",
     "\n",
     "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Exterior1st</th>\n",
+       "      <th>keep</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Exterior1st</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>VinylSd</th>\n",
+       "      <td>364</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HdBoard</th>\n",
+       "      <td>153</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wd Sdng</th>\n",
+       "      <td>148</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MetalSd</th>\n",
+       "      <td>138</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Plywood</th>\n",
+       "      <td>86</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CemntBd</th>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BrkFace</th>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WdShing</th>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stucco</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AsbShng</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stone</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AsphShn</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BrkComm</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CBlock</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ImStucc</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Exterior1st  keep\n",
+       "Exterior1st                   \n",
+       "VinylSd              364     1\n",
+       "HdBoard              153     1\n",
+       "Wd Sdng              148     1\n",
+       "MetalSd              138     1\n",
+       "Plywood               86     1\n",
+       "CemntBd               39     0\n",
+       "BrkFace               35     0\n",
+       "WdShing               21     0\n",
+       "Stucco                17     0\n",
+       "AsbShng               15     0\n",
+       "Stone                  2     0\n",
+       "AsphShn                1     0\n",
+       "BrkComm                1     0\n",
+       "CBlock                 1     0\n",
+       "ImStucc                1     0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# omd \n",
+    "\n",
+    "tol = int(0.05 * X_train.shape[0])\n",
+    "mapping = X_train.groupby('Exterior1st')['Exterior1st'].count().sort_values(ascending=False).to_frame()\n",
+    "mapping['keep'] = np.where(mapping['Exterior1st']>tol,1,0)\n",
+    "mapping"
    ]
   },
   {
@@ -959,9 +1108,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fsml",
+   "display_name": "ml2023",
    "language": "python",
-   "name": "fsml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -973,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
