some changes to section 09 and 10

--- a/Section-10-Categorical-Encoding-Rare-Labels/01-pandas/01-ohe-frequent-categories.ipynb
+++ b/Section-10-Categorical-Encoding-Rare-Labels/01-pandas/01-ohe-frequent-categories.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "       'AsphShn', 'Stone', 'Other', 'CBlock'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "((1022, 3), (438, 3))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "ImStucc                1     0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "(1022, 53)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,13 +483,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Neighborhood\n",
        "NAmes      151\n",
        "CollgCr    105\n",
        "OldTown     73\n",
@@ -500,10 +499,10 @@
        "NWAmes      51\n",
        "NridgHt     51\n",
        "SawyerW     45\n",
-       "Name: count, dtype: int64"
+       "Name: Neighborhood, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +533,7 @@
        " 'SawyerW']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +787,7 @@
        "1011                     0                     0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,6 +806,184 @@
     "\n",
     "# let's visualise the result\n",
     "X_train[[\"Neighborhood\"] + [\"Neighborhood\" + \"_\" + c for c in top_10]].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Exterior1st</th>\n",
+       "      <th>Exterior2nd</th>\n",
+       "      <th>Neighborhood_NAmes</th>\n",
+       "      <th>Neighborhood_CollgCr</th>\n",
+       "      <th>Neighborhood_OldTown</th>\n",
+       "      <th>Exterior1st_VinylSd</th>\n",
+       "      <th>Exterior1st_HdBoard</th>\n",
+       "      <th>Exterior1st_Wd Sdng</th>\n",
+       "      <th>Exterior2nd_VinylSd</th>\n",
+       "      <th>Exterior2nd_Wd Sdng</th>\n",
+       "      <th>Exterior2nd_HdBoard</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>CollgCr</td>\n",
+       "      <td>VinylSd</td>\n",
+       "      <td>VinylSd</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>ClearCr</td>\n",
+       "      <td>Wd Sdng</td>\n",
+       "      <td>Wd Sdng</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>BrkSide</td>\n",
+       "      <td>Wd Sdng</td>\n",
+       "      <td>Plywood</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>Edwards</td>\n",
+       "      <td>WdShing</td>\n",
+       "      <td>Wd Shng</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>SWISU</td>\n",
+       "      <td>Wd Sdng</td>\n",
+       "      <td>Wd Sdng</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Neighborhood Exterior1st Exterior2nd  Neighborhood_NAmes  \\\n",
+       "64        CollgCr     VinylSd     VinylSd                   0   \n",
+       "682       ClearCr     Wd Sdng     Wd Sdng                   0   \n",
+       "960       BrkSide     Wd Sdng     Plywood                   0   \n",
+       "1384      Edwards     WdShing     Wd Shng                   0   \n",
+       "1100        SWISU     Wd Sdng     Wd Sdng                   0   \n",
+       "\n",
+       "      Neighborhood_CollgCr  Neighborhood_OldTown  Exterior1st_VinylSd  \\\n",
+       "64                       1                     0                    1   \n",
+       "682                      0                     0                    0   \n",
+       "960                      0                     0                    0   \n",
+       "1384                     0                     0                    0   \n",
+       "1100                     0                     0                    0   \n",
+       "\n",
+       "      Exterior1st_HdBoard  Exterior1st_Wd Sdng  Exterior2nd_VinylSd  \\\n",
+       "64                      0                    0                    1   \n",
+       "682                     0                    1                    0   \n",
+       "960                     0                    1                    0   \n",
+       "1384                    0                    0                    0   \n",
+       "1100                    0                    1                    0   \n",
+       "\n",
+       "      Exterior2nd_Wd Sdng  Exterior2nd_HdBoard  \n",
+       "64                      0                    0  \n",
+       "682                     1                    0  \n",
+       "960                     0                    0  \n",
+       "1384                    0                    0  \n",
+       "1100                    1                    0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# omd \n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data.drop('SalePrice', axis=1),\n",
+    "                                                    data['SalePrice'],\n",
+    "                                                    test_size=0.3,\n",
+    "                                                    random_state=0)\n",
+    "X_train.shape, y_train.shape, X_test.shape, y_test.shape\n",
+    "\n",
+    "\n",
+    "def ohe_top(X: pd.DataFrame, variable, top=10):\n",
+    "    top = np.min([top, X[variable].nunique()])  # ensure that top is not bigger than the number of unique values\n",
+    "    top_variables = list(X[variable].value_counts().sort_values(ascending=False).head(top).index)\n",
+    "    for i in top_variables:\n",
+    "        X[f\"{variable}_{i}\"] = [1 if cat == i else 0 for cat in X[variable]]\n",
+    "    return X\n",
+    "\n",
+    "for i in [\"Neighborhood\", \"Exterior1st\", \"Exterior2nd\"]:   \n",
+    "    ohe_top(X_train, variable=i, top=3)\n",
+    "\n",
+    "X_train.head(5)"
    ]
   },
   {
