--- a/Section-10-Categorical-Encoding-Rare-Labels/01-pandas/01-ohe-frequent-categories.ipynb
+++ b/Section-10-Categorical-Encoding-Rare-Labels/01-pandas/01-ohe-frequent-categories.ipynb
@@ -51,7 +51,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +150,7 @@
        "4      NoRidge     VinylSd     VinylSd     250000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +204,7 @@
        "       'Blueste'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +227,7 @@
        "       'Stone', 'ImStucc', 'CBlock'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +249,7 @@
        "       'AsphShn', 'Stone', 'Other', 'CBlock'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +278,7 @@
        "((1022, 3), (438, 3))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +431,7 @@
        "ImStucc                1     0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +456,7 @@
        "(1022, 53)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,12 +492,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Neighborhood\n",
        "NAmes      151\n",
        "CollgCr    105\n",
        "OldTown     73\n",
@@ -499,10 +509,10 @@
        "NWAmes      51\n",
        "NridgHt     51\n",
        "SawyerW     45\n",
-       "Name: Neighborhood, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +543,7 @@
        " 'SawyerW']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -738,8 +748,8 @@
        "</div>"
       ],
       "text/plain": [
-       "     Neighborhood  Neighborhood_NAmes  Neighborhood_CollgCr  \\\n",
-       "64        CollgCr                   0                     1   \n",
+       "     Neighborhood  Neighborhood_NAmes  Neighborhood_CollgCr   \n",
+       "64        CollgCr                   0                     1  \\\n",
        "682       ClearCr                   0                     0   \n",
        "960       BrkSide                   0                     0   \n",
        "1384      Edwards                   0                     0   \n",
@@ -750,8 +760,8 @@
        "472       Edwards                   0                     0   \n",
        "1011      Edwards                   0                     0   \n",
        "\n",
-       "      Neighborhood_OldTown  Neighborhood_Edwards  Neighborhood_Sawyer  \\\n",
-       "64                       0                     0                    0   \n",
+       "      Neighborhood_OldTown  Neighborhood_Edwards  Neighborhood_Sawyer   \n",
+       "64                       0                     0                    0  \\\n",
        "682                      0                     0                    0   \n",
        "960                      0                     0                    0   \n",
        "1384                     0                     1                    0   \n",
@@ -762,8 +772,8 @@
        "472                      0                     1                    0   \n",
        "1011                     0                     1                    0   \n",
        "\n",
-       "      Neighborhood_Somerst  Neighborhood_Gilbert  Neighborhood_NWAmes  \\\n",
-       "64                       0                     0                    0   \n",
+       "      Neighborhood_Somerst  Neighborhood_Gilbert  Neighborhood_NWAmes   \n",
+       "64                       0                     0                    0  \\\n",
        "682                      0                     0                    0   \n",
        "960                      0                     0                    0   \n",
        "1384                     0                     0                    0   \n",
@@ -787,7 +797,7 @@
        "1011                     0                     0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -929,22 +939,22 @@
        "</div>"
       ],
       "text/plain": [
-       "     Neighborhood Exterior1st Exterior2nd  Neighborhood_NAmes  \\\n",
-       "64        CollgCr     VinylSd     VinylSd                   0   \n",
+       "     Neighborhood Exterior1st Exterior2nd  Neighborhood_NAmes   \n",
+       "64        CollgCr     VinylSd     VinylSd                   0  \\\n",
        "682       ClearCr     Wd Sdng     Wd Sdng                   0   \n",
        "960       BrkSide     Wd Sdng     Plywood                   0   \n",
        "1384      Edwards     WdShing     Wd Shng                   0   \n",
        "1100        SWISU     Wd Sdng     Wd Sdng                   0   \n",
        "\n",
-       "      Neighborhood_CollgCr  Neighborhood_OldTown  Exterior1st_VinylSd  \\\n",
-       "64                       1                     0                    1   \n",
+       "      Neighborhood_CollgCr  Neighborhood_OldTown  Exterior1st_VinylSd   \n",
+       "64                       1                     0                    1  \\\n",
        "682                      0                     0                    0   \n",
        "960                      0                     0                    0   \n",
        "1384                     0                     0                    0   \n",
        "1100                     0                     0                    0   \n",
        "\n",
-       "      Exterior1st_HdBoard  Exterior1st_Wd Sdng  Exterior2nd_VinylSd  \\\n",
-       "64                      0                    0                    1   \n",
+       "      Exterior1st_HdBoard  Exterior1st_Wd Sdng  Exterior2nd_VinylSd   \n",
+       "64                      0                    0                    1  \\\n",
        "682                     0                    1                    0   \n",
        "960                     0                    1                    0   \n",
        "1384                    0                    0                    0   \n",
@@ -958,7 +968,7 @@
        "1100                    1                    0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1061,14 +1071,14 @@
        "      <th>Neighborhood_NAmes</th>\n",
        "      <th>Neighborhood_CollgCr</th>\n",
        "      <th>Neighborhood_OldTown</th>\n",
-       "      <th>Neighborhood_Edwards</th>\n",
-       "      <th>Neighborhood_Sawyer</th>\n",
-       "      <th>Neighborhood_Somerst</th>\n",
-       "      <th>Neighborhood_Gilbert</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Exterior1st_VinylSd</th>\n",
+       "      <th>Exterior1st_HdBoard</th>\n",
+       "      <th>Exterior1st_Wd Sdng</th>\n",
        "      <th>Exterior2nd_VinylSd</th>\n",
-       "      <th>Exterior2nd_Wd Sdng</th>\n",
-       "      <th>Exterior2nd_HdBoard</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Exterior1st_WdShing</th>\n",
+       "      <th>Exterior1st_Stucco</th>\n",
+       "      <th>Exterior1st_AsbShng</th>\n",
        "      <th>Exterior2nd_MetalSd</th>\n",
        "      <th>Exterior2nd_Plywood</th>\n",
        "      <th>Exterior2nd_CmentBd</th>\n",
@@ -1087,12 +1097,12 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1113,11 +1123,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1137,7 +1147,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -1159,12 +1169,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1185,11 +1195,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1201,47 +1211,47 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
+       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Neighborhood Exterior1st Exterior2nd  Neighborhood_NAmes  \\\n",
-       "64        CollgCr     VinylSd     VinylSd                   0   \n",
+       "     Neighborhood Exterior1st Exterior2nd  Neighborhood_NAmes   \n",
+       "64        CollgCr     VinylSd     VinylSd                   0  \\\n",
        "682       ClearCr     Wd Sdng     Wd Sdng                   0   \n",
        "960       BrkSide     Wd Sdng     Plywood                   0   \n",
        "1384      Edwards     WdShing     Wd Shng                   0   \n",
        "1100        SWISU     Wd Sdng     Wd Sdng                   0   \n",
        "\n",
-       "      Neighborhood_CollgCr  Neighborhood_OldTown  Neighborhood_Edwards  \\\n",
-       "64                       1                     0                     0   \n",
-       "682                      0                     0                     0   \n",
-       "960                      0                     0                     0   \n",
-       "1384                     0                     0                     1   \n",
-       "1100                     0                     0                     0   \n",
+       "      Neighborhood_CollgCr  Neighborhood_OldTown  Exterior1st_VinylSd   \n",
+       "64                       1                     0                    1  \\\n",
+       "682                      0                     0                    0   \n",
+       "960                      0                     0                    0   \n",
+       "1384                     0                     0                    0   \n",
+       "1100                     0                     0                    0   \n",
        "\n",
-       "      Neighborhood_Sawyer  Neighborhood_Somerst  Neighborhood_Gilbert  ...  \\\n",
-       "64                      0                     0                     0  ...   \n",
-       "682                     0                     0                     0  ...   \n",
-       "960                     0                     0                     0  ...   \n",
-       "1384                    0                     0                     0  ...   \n",
-       "1100                    0                     0                     0  ...   \n",
+       "      Exterior1st_HdBoard  Exterior1st_Wd Sdng  Exterior2nd_VinylSd  ...   \n",
+       "64                      0                    0                    1  ...  \\\n",
+       "682                     0                    1                    0  ...   \n",
+       "960                     0                    1                    0  ...   \n",
+       "1384                    0                    0                    0  ...   \n",
+       "1100                    0                    1                    0  ...   \n",
        "\n",
-       "      Exterior2nd_VinylSd  Exterior2nd_Wd Sdng  Exterior2nd_HdBoard  \\\n",
-       "64                      1                    0                    0   \n",
-       "682                     0                    1                    0   \n",
-       "960                     0                    0                    0   \n",
-       "1384                    0                    0                    0   \n",
-       "1100                    0                    1                    0   \n",
+       "      Exterior1st_WdShing  Exterior1st_Stucco  Exterior1st_AsbShng   \n",
+       "64                      0                   0                    0  \\\n",
+       "682                     0                   0                    0   \n",
+       "960                     0                   0                    0   \n",
+       "1384                    1                   0                    0   \n",
+       "1100                    0                   0                    0   \n",
        "\n",
-       "      Exterior2nd_MetalSd  Exterior2nd_Plywood  Exterior2nd_CmentBd  \\\n",
-       "64                      0                    0                    0   \n",
+       "      Exterior2nd_MetalSd  Exterior2nd_Plywood  Exterior2nd_CmentBd   \n",
+       "64                      0                    0                    0  \\\n",
        "682                     0                    0                    0   \n",
        "960                     0                    1                    0   \n",
        "1384                    0                    0                    0   \n",
        "1100                    0                    0                    0   \n",
        "\n",
-       "      Exterior2nd_Wd Shng  Exterior2nd_BrkFace  Exterior2nd_AsbShng  \\\n",
-       "64                      0                    0                    0   \n",
+       "      Exterior2nd_Wd Shng  Exterior2nd_BrkFace  Exterior2nd_AsbShng   \n",
+       "64                      0                    0                    0  \\\n",
        "682                     0                    0                    0   \n",
        "960                     0                    0                    0   \n",
        "1384                    1                    0                    0   \n",
@@ -1254,10 +1264,10 @@
        "1384                   0  \n",
        "1100                   0  \n",
        "\n",
-       "[5 rows x 33 columns]"
+       "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
